JAHIACOM-1287 Resolve table overlap issue in documentation page on small devices

--- a/src/main/resources/scss/custom/_content.scss
+++ b/src/main/resources/scss/custom/_content.scss
@@ -124,4 +124,9 @@ $list-puce-size: 22px;
     display: block;
     margin: spacing(4) 0;
   }
+
+  // prevent the overlapping of the "In this page" section
+  table {
+    table-layout: fixed
+  }
 }
